--- a/frontend/src/components/Layout/Navbar.css
+++ b/frontend/src/components/Layout/Navbar.css
@@ -91,6 +91,7 @@
     display: flex;
     align-items: center;
     gap: var(--spacing-md);
+    margin-right: var(--spacing-lg);
 }
 
 /* ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
@@ -297,14 +298,16 @@
    ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ */
 
 .studium-nav-profile-info {
-    padding: var(--spacing-md);
+    padding: var(--spacing-sm) var(--spacing-md);
     border-bottom: var(--border-width) solid var(--color-border);
+    text-align: center;
+    border-bottom: var(--border-width) solid var(--color-white);
 }
 
 .studium-nav-profile-name {
-    font-weight: var(--font-weight-semibold);
     color: var(--color-text-primary);
     font-size: var(--font-size-xl);
+    font-weight: var(--font-weight-semibold);
     margin-bottom: var(--spacing-sm);
 }
 
@@ -315,7 +318,8 @@
 }
 
 .studium-nav-profile-menu {
-    padding: var(--spacing-xs) var(--spacing-xs);
+    padding: var(--spacing-md) var(--spacing-md);
+    /* padding-bottom: var(--spacing-md); */
 }
 
 .studium-nav-profile-item {
